orchestrators/k8s/kafka-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  namespace: kafka-system
spec:
  containers:
  - name: kafka-client
    image: docker.io/bitnami/kafka:3.6.0-debian-11-r2
    command: ["sleep", "infinity"]
    volumeMounts:
    - name: config-volume
      mountPath: /tmp
  restartPolicy: Never
  volumes:
  - name: config-volume
    configMap:
      name: kafka-client-properties
