orchestrators/k8s/data-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: data-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-service
  template:
    metadata:
      labels:
        app: data-service
    spec:
      containers:
      - name: data-service
        image: gryphon2411/derkino-data_service:latest
        ports:
        - name: http
          containerPort: 8080
