orchestrators/k8s/dev-auth-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-auth-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 8081
      targetPort: 8080
      protocol: TCP
  selector:
    app: dev-auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-auth-service
  template:
    metadata:
      labels:
        app: dev-auth-service
    spec:
      containers:
      - name: dev-auth-service
        image: gryphon2411/derkino-auth_service:latest
        ports:
        - name: http
          containerPort: 8080
