orchestrators/k8s/dev-ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-ui
spec:
  selector:
    app: dev-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-ui
  labels:
    app: dev-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-ui
  template:
    metadata:
      labels:
        app: dev-ui
    spec:
      containers:
      - name: dev-ui
        image: gryphon2411/derkino-ui:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
