orchestrators/k8s/generative-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: generative-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 8083
      targetPort: 8000
      protocol: TCP
  selector:
    app: generative-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generative-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generative-service
  template:
    metadata:
      labels:
        app: generative-service
    spec:
      containers:
      - name: generative-service
        image: gryphon2411/derkino-generative_service:latest
        ports:
        - name: http
          containerPort: 8000
