orchestrators/k8s/mongodb-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb-system
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mongodb-system
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodb-system
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
