orchestrators/k8s/redis-stack-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-stack-system
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stack
  namespace: redis-stack-system
spec:
  selector:
    app: redis-stack
  type: NodePort
  ports:
  - name: default
    port: 6379
    targetPort: 6379
  - name: http
    port: 8001
    targetPort: 8001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stack
  namespace: redis-stack-system
spec:
  selector:
    matchLabels:
      app: redis-stack
  serviceName: redis-stack
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stack
    spec:
      containers:
      - name: redis-stack
        image: redis/redis-stack:latest
        ports:
        - name: default
          containerPort: 6379
        - name: http
          containerPort: 8001
