orchestrators/k8s/redis-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-system
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis-system
spec:
  selector:
    app: redis
  ports:
  - name: default
    port: 6379
    targetPort: 6379
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis-system
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
          name: default
