orchestrators/k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ui
            port:
              number: 80
      - pathType: Prefix
        path: "/api/v1/auth"
        backend:
          service:
            name: auth-service
            port:
              number: 8081
      - pathType: Prefix
        path: "/api/v1/data"
        backend:
          service:
            name: data-service
            port:
              number: 8082
      - pathType: Prefix
        path: "/api/v1/generative"
        backend:
          service:
            name: generative-service
            port:
              number: 8083
